--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,46 @@
+antiorm==1.2.1
 asn1crypto==0.24.0
-astroid==2.0.4
-autopep8==1.4
-beautifulsoup4==4.6.3
-certifi==2018.8.24
+attrs==18.2.0
+Automat==0.7.0
+certifi==2018.10.15
 cffi==1.11.5
 chardet==3.0.4
-colorama==0.3.9
-crypto==1.4.1
+constantly==15.1.0
 cryptography==2.3.1
-flake8==3.5.0
+cssselect==1.0.3
+db==0.1.1
+gevent==1.3.7
+greenlet==0.4.15
+hyperlink==18.0.0
 idna==2.7
-isort==4.3.4
-lazy-object-proxy==1.3.1
+incremental==17.5.0
+jmespath==0.9.3
 lxml==4.2.5
-mccabe==0.6.1
 mongoengine==0.15.3
-Naked==0.1.31
-numpy==1.15.1
-opencv-python==3.4.3.18
-pycodestyle==2.3.1
+parsel==1.5.1
+Pillow==5.3.0
+psutil==5.4.7
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
 pycparser==2.19
-pyflakes==1.6.0
-pylint==2.1.1
+pycrypto==2.6.1
+PyDispatcher==2.0.5
+PyHamcrest==1.9.0
 pymongo==3.7.2
-PyMySQL==0.9.2
-PyYAML==3.13
-requests==2.19.1
-selenium==3.14.1
-shellescape==3.4.1
+pyOpenSSL==18.0.0
+pytesseract==0.2.5
+pywin32==221
+queuelib==1.5.0
+redis==2.10.6
+requests==2.20.0
+Scrapy==1.5.1
+scrapyd==1.2.0
+service-identity==17.0.0
 six==1.11.0
-urllib3==1.23
-wrapt==1.10.11
-yapf==0.24.0
+SQLAlchemy==1.2.12
+Twisted==18.9.0
+urllib3==1.24
+utils==0.9.0
+w3lib==1.19.0
+web.py==0.40.dev0
+zope.interface==4.6.0
